New feat: equality constraints

--- a/test/Equality Constraints 200.ipynb
+++ b/test/Equality Constraints 200.ipynb
@@ -23,197 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "836f4f8e-9145-4d00-996d-d0e2fce26db5",
-   "metadata": {},
-   "source": [
-    "### Define Problem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7cc1b4d2-c7f9-467c-92cf-c7daf66cca31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.linalg import null_space\n",
-    "\n",
-    "class nmRosenbrock(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Penalty loss function for Rosenbrock problem\n",
-    "    \"\"\"\n",
-    "    def __init__(self, input_keys, steepness, num_blocks, penalty_weight=50, output_key=\"loss\"):\n",
-    "        super().__init__()\n",
-    "        self.b_key, self.a_key, self.x_key = input_keys\n",
-    "        self.output_key = output_key\n",
-    "        self.steepness = steepness\n",
-    "        self.num_blocks = num_blocks\n",
-    "        self.penalty_weight = penalty_weight\n",
-    "        self.device = None\n",
-    "        # coefs\n",
-    "        rng = np.random.RandomState(17)\n",
-    "        P = rng.normal(scale=1, size=(3, num_blocks))\n",
-    "        q = rng.normal(scale=1, size=(num_blocks))\n",
-    "        self.P = torch.from_numpy(P).float()\n",
-    "        self.q = torch.from_numpy(q).float()\n",
-    "        \n",
-    "\n",
-    "    def forward(self, input_dict):\n",
-    "        \"\"\"\n",
-    "        forward pass\n",
-    "        \"\"\"\n",
-    "        # objective function\n",
-    "        obj = self.cal_obj(input_dict)\n",
-    "        # constraints violation\n",
-    "        viol = self.cal_constr_viol(input_dict)\n",
-    "        # penalized loss\n",
-    "        loss = obj + self.penalty_weight * viol\n",
-    "        input_dict[self.output_key] = torch.mean(loss)\n",
-    "        return input_dict\n",
-    "\n",
-    "    def cal_obj(self, input_dict):\n",
-    "        \"\"\"\n",
-    "        calculate objective function\n",
-    "        \"\"\"\n",
-    "        # get values\n",
-    "        x, a = input_dict[self.x_key], input_dict[self.a_key]\n",
-    "        # x_2i\n",
-    "        x1 = x[:, ::2]\n",
-    "        # x_2i+1\n",
-    "        x2 = x[:, 1::2]\n",
-    "        # objective function\n",
-    "        f = torch.sum((a - x1) ** 2 + self.steepness * (x2 - x1 ** 2) ** 2, dim=1)\n",
-    "        return f\n",
-    "\n",
-    "    def cal_constr_viol(self, input_dict):\n",
-    "        \"\"\"\n",
-    "        calculate constraints violation\n",
-    "        \"\"\"\n",
-    "        # get values\n",
-    "        x, b = input_dict[self.x_key], input_dict[self.b_key]\n",
-    "        # update device\n",
-    "        if self.device is None:\n",
-    "            self.device = x.device\n",
-    "            self.P = self.P.to(self.device)\n",
-    "            self.q = self.q.to(self.device)\n",
-    "        # inner constraint violation\n",
-    "        lhs_inner = torch.sum(x[:, 1::2], dim=1)\n",
-    "        rhs_inner = self.num_blocks * b[:, 0] / 2\n",
-    "        inner_violation = torch.relu(rhs_inner - lhs_inner)\n",
-    "        # outer constraint violation\n",
-    "        lhs_outer = torch.sum(x[:, ::2] ** 2, dim=1)\n",
-    "        rhs_outer = self.num_blocks * b[:, 0]\n",
-    "        outer_violation = torch.relu(lhs_outer - rhs_outer)\n",
-    "        # lear constraint violation\n",
-    "        lhs = torch.matmul(x[:, 1::2], self.q)\n",
-    "        linear_violation = torch.relu(lhs)\n",
-    "        return inner_violation + outer_violation + linear_violation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f873aad0-1ee5-4bac-89d2-4eb22e063418",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from pyomo import environ as pe\n",
-    "from src.problem.math_solver import abcParamSolver\n",
-    "\n",
-    "class msRosenbrock(abcParamSolver):\n",
-    "    def __init__(self, steepness, num_blocks, timelimit=None):\n",
-    "        super().__init__(timelimit=timelimit)\n",
-    "        # create model\n",
-    "        m = pe.ConcreteModel()\n",
-    "        # parameters\n",
-    "        m.b = pe.Param(default=1, mutable=True)\n",
-    "        m.a = pe.Param(pe.RangeSet(0, num_blocks-1), default=1, mutable=True)\n",
-    "        # variables\n",
-    "        m.x = pe.Var(pe.RangeSet(0, num_blocks*2-1), domain=pe.Reals)\n",
-    "        for i in range(num_blocks):\n",
-    "            # integer variables\n",
-    "            m.x[2*i+1].domain = pe.Integers\n",
-    "        # objective\n",
-    "        obj = sum((m.a[i] - m.x[2*i]) ** 2 + \\\n",
-    "                   steepness * (m.x[2*i+1] - m.x[2*i] ** 2) ** 2 for i in range(num_blocks))\n",
-    "        m.obj = pe.Objective(sense=pe.minimize, expr=obj)\n",
-    "        # constraints\n",
-    "        m.cons = pe.ConstraintList()\n",
-    "        m.cons.add(sum(m.x[2*i+1] for i in range(num_blocks)) >= num_blocks * m.b / 2)\n",
-    "        m.cons.add(sum(m.x[2*i] ** 2 for i in range(num_blocks)) <= num_blocks * m.b)\n",
-    "        rng = np.random.RandomState(17)\n",
-    "        b = rng.normal(scale=1, size=(3, num_blocks))\n",
-    "        q = rng.normal(scale=1, size=(num_blocks))\n",
-    "        m.cons.add(sum(b[0,i] * m.x[2*i] for i in range(num_blocks)) == 0)\n",
-    "        m.cons.add(sum(b[1,i] * m.x[2*i] for i in range(num_blocks)) == 0)\n",
-    "        m.cons.add(sum(b[2,i] * m.x[2*i] for i in range(num_blocks)) == 0)\n",
-    "        m.cons.add(sum(q[i] * m.x[2*i+1] for i in range(num_blocks)) <= 0)\n",
-    "        # attribute\n",
-    "        self.model = m\n",
-    "        self.params ={\"b\":m.b, \"a\":m.a}\n",
-    "        self.vars = {\"x\":m.x}\n",
-    "        self.cons = m.cons"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bbee0595-6430-4ed2-8988-ccdb83d743ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.linalg import null_space\n",
-    "\n",
-    "class rosenbrockNullSpaceEncoding(nn.Module):\n",
-    "    def __init__(self, num_blocks, input_key, output_key):\n",
-    "        \"\"\"\n",
-    "        encode equality constraints P x = 0 using null space decomposition.\n",
-    "        \"\"\"\n",
-    "        super().__init__()\n",
-    "        # size\n",
-    "        self.num_blocks = num_blocks\n",
-    "        # data keys\n",
-    "        self.input_key = input_key\n",
-    "        self.output_key = output_key\n",
-    "        # init encoding\n",
-    "        rng = np.random.RandomState(17)\n",
-    "        P = rng.normal(scale=1, size=(3, self.num_blocks))\n",
-    "        # sepecial solution for equality constraints\n",
-    "        x_s, _, _, _ = np.linalg.lstsq(P, np.zeros(3), rcond=None)\n",
-    "        # null space for equality constraints\n",
-    "        N = null_space(P)\n",
-    "        # to pytorch\n",
-    "        self.x_s = torch.tensor(x_s, dtype=torch.float32).view(1, -1)\n",
-    "        self.N = torch.tensor(N, dtype=torch.float32)\n",
-    "        # init device\n",
-    "        self.device = None\n",
-    "\n",
-    "    def forward(self, data):\n",
-    "        # get free parameters\n",
-    "        z = data[self.input_key]\n",
-    "        # batch size\n",
-    "        batch_size = z.shape[0]\n",
-    "        # device\n",
-    "        if z.device != self.device:\n",
-    "            self.device = z.device\n",
-    "            self.x_s = self.x_s.to(self.device)\n",
-    "            self.N = self.N.to(self.device)\n",
-    "        # init x\n",
-    "        x = torch.zeros((batch_size, self.num_blocks*2)).to(self.device)\n",
-    "        # integer part\n",
-    "        x[:, 1::2] = z[:,self.num_blocks-3:]\n",
-    "        # continous part  to encode\n",
-    "        x[:, 0::2] = self.x_s + torch.einsum(\"bj,ij->bi\", z[:,:self.num_blocks-3], self.N)\n",
-    "        data[self.output_key] = x\n",
-    "        # cut off z\n",
-    "        data[self.input_key] = z[:,:self.num_blocks-3]\n",
-    "        return data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2e876505-51b6-4011-ae8a-b27459a6e971",
    "metadata": {},
    "source": [
@@ -222,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b78e3dd1-f9be-438f-9b40-6745f4f285af",
    "metadata": {},
    "outputs": [],
@@ -238,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2d040f1a-56b0-4c94-ba7a-921c2c4d93c2",
    "metadata": {},
    "outputs": [],
@@ -256,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "1c3ea095-2bd8-4ecc-ab73-ce42cb66b751",
    "metadata": {},
    "outputs": [],
@@ -284,11 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "e55e7bf9-8897-49af-9719-fb77df0f349e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from src.problem import msRosenbrock\n",
     "model = msRosenbrock(steepness, num_blocks, timelimit=60)"
    ]
   },
@@ -302,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e2d38a02-c027-48e6-9205-08e3ad682dc6",
    "metadata": {},
    "outputs": [],
@@ -315,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b2ee933c-27af-4aa9-9fc2-8ceed279534d",
    "metadata": {},
    "outputs": [],
@@ -330,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "12b89626-b966-42de-89e4-08689910b3ac",
    "metadata": {},
    "outputs": [],
@@ -339,13 +149,14 @@
     "import neuromancer as nm\n",
     "from src.func.layer import netFC\n",
     "from src.func import roundGumbelModel\n",
+    "from src.problem import nmRosenbrock, rosenbrockEquality\n",
     "# build neural architecture for the solution map\n",
     "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks-3, bias=True,\n",
     "                             linear_map=nm.slim.maps[\"linear\"],\n",
     "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
     "smap = nm.system.Node(func, [\"b\", \"a\"], [\"z\"], name=\"smap\")\n",
     "# linear constraint encode\n",
-    "encoding = rosenbrockNullSpaceEncoding(num_blocks, input_key=\"z\", output_key=\"x\")\n",
+    "encoding = rosenbrockEquality(num_blocks, input_key=\"z\", output_key=\"x\")\n",
     "# define rounding model\n",
     "layers_rnd = netFC(input_dim=3*num_blocks+1, hidden_dims=[hsize]*hlayers_rnd, output_dim=2*num_blocks-3)\n",
     "rnd = roundGumbelModel(layers=layers_rnd, param_keys=[\"b\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], \n",
@@ -357,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "53854d39-8dc3-4228-8c15-0c0e894d7595",
    "metadata": {},
    "outputs": [
@@ -418,7 +229,7 @@
       "Early stopping at iters 6125\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 102.98 sec.\n"
+      "The training time is 91.35 sec.\n"
      ]
     }
    ],
@@ -437,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "f5740c26-8e56-4273-b194-c137dc105b60",
    "metadata": {},
    "outputs": [
@@ -445,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 51.98it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 57.91it/s]\n"
      ]
     },
     {
@@ -454,13 +265,13 @@
      "text": [
       "          Obj Val  Mean Violation  Max Violation  Num Violations  Elapsed Time\n",
       "count  100.000000           100.0          100.0           100.0    100.000000\n",
-      "mean   497.850032             0.0            0.0             0.0      0.004028\n",
-      "std     86.855250             0.0            0.0             0.0      0.001570\n",
-      "min    312.995691             0.0            0.0             0.0      0.002000\n",
-      "25%    429.101735             0.0            0.0             0.0      0.003003\n",
-      "50%    488.077553             0.0            0.0             0.0      0.003514\n",
-      "75%    561.077152             0.0            0.0             0.0      0.004394\n",
-      "max    689.484268             0.0            0.0             0.0      0.010808\n",
+      "mean   497.850032             0.0            0.0             0.0      0.003545\n",
+      "std     86.855250             0.0            0.0             0.0      0.000991\n",
+      "min    312.995691             0.0            0.0             0.0      0.001997\n",
+      "25%    429.101735             0.0            0.0             0.0      0.003001\n",
+      "50%    488.077553             0.0            0.0             0.0      0.003294\n",
+      "75%    561.077152             0.0            0.0             0.0      0.003959\n",
+      "max    689.484268             0.0            0.0             0.0      0.006710\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -517,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "631e7fa1-3857-463b-babd-ae78f4e3dd63",
    "metadata": {},
    "outputs": [],
@@ -530,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "286bb184-586d-4cde-80fe-311d5c426abb",
    "metadata": {},
    "outputs": [],
@@ -545,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "36dfc237-c232-404c-ba41-877099c0008e",
    "metadata": {},
    "outputs": [],
@@ -554,13 +365,14 @@
     "import neuromancer as nm\n",
     "from src.func.layer import netFC\n",
     "from src.func import roundThresholdModel\n",
+    "from src.problem import nmRosenbrock, rosenbrockEquality\n",
     "# build neural architecture for the solution map\n",
     "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks-3, bias=True,\n",
     "                             linear_map=nm.slim.maps[\"linear\"],\n",
     "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
     "smap = nm.system.Node(func, [\"b\", \"a\"], [\"z\"], name=\"smap\")\n",
     "# linear constraint encode\n",
-    "encoding = rosenbrockNullSpaceEncoding(num_blocks, input_key=\"z\", output_key=\"x\")\n",
+    "encoding = rosenbrockEquality(num_blocks, input_key=\"z\", output_key=\"x\")\n",
     "# define rounding model\n",
     "layers_rnd = netFC(input_dim=3*num_blocks+1, hidden_dims=[hsize]*hlayers_rnd, output_dim=2*num_blocks-3)\n",
     "rnd = roundThresholdModel(layers=layers_rnd, param_keys=[\"b\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], \n",
@@ -572,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "c38c697f-2297-40fb-b1dc-521561c9e462",
    "metadata": {},
    "outputs": [
@@ -652,7 +464,7 @@
       "Early stopping at iters 8500\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 133.24 sec.\n"
+      "The training time is 132.10 sec.\n"
      ]
     }
    ],
@@ -671,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "9d16528d-8174-45a6-bce1-c6dd507ceb0d",
    "metadata": {},
    "outputs": [
@@ -679,7 +491,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 57.07it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:01<00:00, 53.35it/s]\n"
      ]
     },
     {
@@ -688,13 +500,13 @@
      "text": [
       "          Obj Val  Mean Violation  Max Violation  Num Violations  Elapsed Time\n",
       "count  100.000000           100.0          100.0           100.0    100.000000\n",
-      "mean   561.447941             0.0            0.0             0.0      0.003595\n",
-      "std    115.675314             0.0            0.0             0.0      0.000971\n",
-      "min    334.502777             0.0            0.0             0.0      0.001998\n",
-      "25%    498.454217             0.0            0.0             0.0      0.003002\n",
-      "50%    553.078944             0.0            0.0             0.0      0.003436\n",
-      "75%    616.772741             0.0            0.0             0.0      0.004018\n",
-      "max    971.378564             0.0            0.0             0.0      0.008277\n",
+      "mean   561.447941             0.0            0.0             0.0      0.003749\n",
+      "std    115.675314             0.0            0.0             0.0      0.001547\n",
+      "min    334.502777             0.0            0.0             0.0      0.002000\n",
+      "25%    498.454217             0.0            0.0             0.0      0.003000\n",
+      "50%    553.078944             0.0            0.0             0.0      0.003079\n",
+      "75%    616.772741             0.0            0.0             0.0      0.004106\n",
+      "max    971.378564             0.0            0.0             0.0      0.011631\n",
       "Number of infeasible solution: 0\n"
      ]
     }
